[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/characters/enemies/Ghost_StandDown.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 823.002

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 80.0062

[node name="Enemy" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 4 )

[node name="SearchRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchRange"]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 3 )

[node name="Weapon" parent="." instance=ExtResource( 1 )]

[editable path="Weapon"]
